--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               </ul>
             </div>
             <div
-              class="card-body justify-content-between skill__deck__container"
+              class="card-body justify-content-center d-flex skill__deck__container"
             >
               <!-- Work card deck -->
               <div class="row card-deck-sortable skill__deck">
@@ -211,7 +211,7 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
                     <div class="card-header h5">Title 1</div>
                     <div class="card-body">
@@ -226,13 +226,13 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">Title 2</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Donec urna magna, commodo vel mauris ac, aliquam
+                        elementum nulla.
                       </p>
                     </div>
                   </div>
@@ -241,13 +241,13 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">Title 3</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Phasellus lorem magna, facilisis blandit justo vitae,
+                        lobortis tempus turpis.
                       </p>
                     </div>
                   </div>
@@ -257,13 +257,12 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">Title 4</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Donec vitae justo sit amet mi finibus cursus.
                       </p>
                     </div>
                   </div>
@@ -275,13 +274,13 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
                     <div class="card-header h5">Title 1</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Nullam lorem velit, vehicula ut risus ut, hendrerit
+                        suscipit dolor.
                       </p>
                     </div>
                   </div>
@@ -290,13 +289,13 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">Title 2</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Nam odio risus, ultricies ac nisi et, faucibus pretium
+                        est.
                       </p>
                     </div>
                   </div>
@@ -306,13 +305,12 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">Title 3</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Ut egestas maximus purus, id rhoncus nunc feugiat vitae.
                       </p>
                     </div>
                   </div>
@@ -324,13 +322,13 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
                     <div class="card-header h5">Title 1</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Vestibulum felis lacus, tristique sed eleifend sit amet,
+                        aliquet ut purus.
                       </p>
                     </div>
                   </div>
@@ -339,13 +337,13 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">Title 2</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Aenean malesuada, diam pretium porta pretium, orci ipsum
+                        efficitur mauris, nec egestas massa dui nec libero.
                       </p>
                     </div>
                   </div>
@@ -357,13 +355,12 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
                     <div class="card-header h5">Title 67</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Etiam lacinia eu nisl quis lobortis.
                       </p>
                     </div>
                   </div>
@@ -372,44 +369,13 @@
                 <div class="col-auto">
                   <div
                     class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
+                    style="width: 16rem"
                   >
                     <div class="card-header h5">Title 76</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- Card -->
-                <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
-                  >
-                    <div class="card-header h5">Title 1</div>
-                    <div class="card-body">
-                      <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Card -->
-                <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="max-width: 18rem"
-                  >
-                    <div class="card-header h5">Title 1</div>
-                    <div class="card-body">
-                      <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Sed finibus tellus sapien, ut tincidunt ante volutpat
+                        eleifend.
                       </p>
                     </div>
                   </div>
