'bg-image-and-new-font'

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 Hi! I would like to introduce myself. My name is Máté and this
                 is my self-made portfolio page. I suppose you navigated here,
                 because you saw this somewhere online. If you carry on, you will
-                get a present at the end of the page.<br />
+                get a present at the end of the page.<br /><br />
                 Have a good time!
               </p>
             </div>
