--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
   <body>
     <!-- h Navbar -->
     <nav
-      class="navbar sticky-top navbar-expand-sm navbar-light bg-nav-foot mb-5"
+      class="navbar sticky-top navbar-expand-sm navbar-dark bg_nav_foot mb-5"
     >
       <div class="container">
-        <a href="" class="navbar-brand mb-0 h1">My Portfolio</a>
+        <a
+          href=""
+          class="navbar-brand mb-0 h1 fst-italic p-2 bg-success rounded"
+          >my Portfolio</a
+        >
         <button
           type="button"
           data-bs-toggle="collapse"
@@ -52,13 +56,13 @@
         <div class="collapse navbar-collapse" id="navbarId">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#about" class="nav-link">About</a>
+              <a href="#about" class="nav-link">about</a>
             </li>
             <li class="nav-item">
-              <a href="#skills" class="nav-link">Skills</a>
+              <a href="#skills" class="nav-link">skills</a>
             </li>
             <li class="nav-item">
-              <a href="#projects" class="nav-link">Projects</a>
+              <a href="#projects" class="nav-link">projects</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -68,7 +72,7 @@
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
-                >Contact</a
+                >contact</a
               >
               <ul class="dropdown-menu" aria-labelledby="contactId">
                 <li><a href="#linkedin" class="dropdown-item">LinkedIn</a></li>
@@ -430,7 +434,7 @@
                   <div class="carousel-item active">
                     <img
                       src="img/forkify.png"
-                      class="d-block w-100 project-images"
+                      class="d-block w-100 project_images"
                       alt="forkify"
                     />
                     <div class="carousel-caption d-none d-md-block">
@@ -442,7 +446,7 @@
                   <div class="carousel-item">
                     <img
                       src="img/github.jpg"
-                      class="d-block w-100 project-images"
+                      class="d-block w-100 project_images"
                       alt="github"
                     />
                     <div class="carousel-caption d-none d-md-block text-white">
@@ -504,7 +508,7 @@
     </main>
     <!-- h Footer -->
     <footer>
-      <div class="mt-3 pt-5 pb-5 bg-nav-foot">
+      <div class="mt-5 pt-3 pb-3 bg_nav_foot">
         <div class="container">
           <div class="row">
             <div class="col-1"></div>
