--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       </div>
     </nav>
     <main>
-      <!-- h1 Intro -->
+      <!-- h Intro -->
       <div class="container">
-        <section id="intro">
+        <section id="intro" class="hidden">
           <div
             class="d-flex align-items-center justify-content-center absolute_center"
           >
@@ -506,7 +506,7 @@
         </section>
       </div>
     </main>
-    <!-- h Footer -->
+    <!-- h1 Footer -->
     <footer>
       <div class="mt-5 pt-3 pb-3 bg_nav_foot">
         <div class="container">
