date-handling-text-wording

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
               <h1>Intro</h1>
               <p>
                 Hi! I would like to introduce myself. My name is Máté and this
-                is my self-made portfolio page. I suppose you navigated here,
-                because you saw this somewhere online. If you carry on, you will
-                get a present at the end of the page.<br /><br />
+                is my self-made portfolio page. Thank you for navigating here.
+                If you carry on, you will get a small present at the end of the
+                page.<br /><br />
                 Have a good time!
               </p>
             </div>
@@ -108,7 +108,7 @@
         <section id="about">
           <h2>About</h2>
           <!-- In General -->
-          <div class="card mb-3" style="max-width: 1000px">
+          <div class="card mb-3" style="max-width: 750px">
             <div class="row g-0">
               <div class="col-lg-4">
                 <img
@@ -121,35 +121,34 @@
                 <div class="card-body">
                   <h5 class="card-title">In General</h5>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                    finibus elit nec est dignissim viverra. Cras eu urna vitae
-                    velit ultricies vehicula. Morbi dignissim, libero sit amet
-                    rutrum convallis, nisi velit pulvinar diam, aliquet
-                    ultricies velit odio eu quam. Maecenas rhoncus, ligula
-                    fringilla bibendum dictum, tortor neque ullamcorper nulla,
-                    fermentum efficitur mauris quam sed ante. Suspendisse vitae
-                    est commodo, consectetur dui eu, luctus dui. Morbi mattis
-                    velit eu est convallis sodales. Etiam luctus ac enim non
-                    maximus.
+                    I am a 24 years old, young, ambitious guy from Hungary. I
+                    grew up in a small town in the heart of Zemplén, Sárospatak,
+                    with my loving family. I went to school there and moved to
+                    Debrecen in 2018. For 4 years I attended to The University
+                    of Debrecen, after that I stayed in the city, and started my
+                    career here.
                   </p>
                 </div>
               </div>
             </div>
           </div>
           <!-- Education -->
-          <div class="col-lg-6 offset-lg-6">
-            <div class="card mb-3" style="max-width: 750px">
+          <div class="offset-lg-5">
+            <div class="card mb-3" style="max-width: 1000px">
               <div class="row g-0">
                 <div class="col-lg-8">
                   <div class="card-body">
                     <h5 class="card-title">Education</h5>
                     <p class="card-text">
-                      Fusce nisl massa, ullamcorper vel tincidunt non, fringilla
-                      sed nisl. In lacinia nisi at tellus lacinia mollis. Duis
-                      lacinia, est id euismod vestibulum, justo justo semper
-                      mauris, vel eleifend mauris neque nec erat. Morbi mattis
-                      velit eu est convallis sodales. Etiam luctus ac enim non
-                      maximus.
+                      As a fan of technology, I always wanted to learn and
+                      improve my knowledge in a lot of segments of the virtual
+                      world. In late high-school I decided to stick with the
+                      programming line, and I was admitted as a Business
+                      Informatics student. There was a lot of data science, data
+                      and statistics analyzing that I liked, and a lot of
+                      economic stuff that I did not. In paralell I got into web
+                      development, started learning the holy trinity (JS, HTML,
+                      CSS).
                     </p>
                   </div>
                 </div>
@@ -157,31 +156,33 @@
                   <img
                     src="img\education.jpg"
                     class="img-fluid rounded-start"
-                    alt="..."
+                    alt="edu"
                   />
                 </div>
               </div>
             </div>
           </div>
           <!-- Experience -->
-          <div class="card mb-3" style="max-width: 1000px">
+          <div class="card" style="max-width: 600px">
             <div class="row g-0">
               <div class="col-lg-3">
                 <img
                   src="img\exp.jpg"
                   class="img-fluid rounded-start"
-                  alt="general"
+                  alt="exp"
                 />
               </div>
               <div class="col-lg-9">
                 <div class="card-body">
                   <h5 class="card-title">Experience</h5>
                   <p class="card-text">
-                    Nullam ac sem ullamcorper, egestas enim a, egestas risus.
-                    Proin et purus porta, convallis nulla vel, viverra elit.
-                    Duis ultrices massa non luctus iaculis. In ultricies, quam a
-                    finibus tincidunt, nunc magna iaculis est, vitae viverra sem
-                    dui quis tellus.
+                    I started working as a Trainee at a nice, small, family like
+                    company as a manual tester in February, 2022. After I got my
+                    degree, I got hired as a Junior Sharepoint developer, and
+                    started working full-time in September, 2022. I learnt a
+                    lots of various things about web-development, and worked
+                    with a lots of different technology types. I still work for
+                    this company now, as of <span id="today"></span>.
                   </p>
                 </div>
               </div>
@@ -515,11 +516,9 @@
             <div class="col-10 text-center">
               <p>
                 Thank you for getting this far! The present I promised, you've
-                already gotten. You got to know another human being in your
-                lifetime. People should appreciate these kind of little things
-                in life, because you only got 1. So, if you want this
-                relationship to be two-way, you should contact me when you're
-                done here. Bye!
+                already gotten. You've got to know another human being in your
+                lifetime. So, if you want this relationship to be two-way, you
+                should contact me when you're done here. Bye!
               </p>
               <p>© 2023 by Máté Rák</p>
             </div>
