--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="card-body">
                   <h5 class="card-title">In General</h5>
                   <p class="card-text">
-                    I am a 24 years old, young, ambitious guy from Hungary. I
+                    I am a 24 year old, young, ambitious guy from Hungary. I
                     grew up in a small town in the heart of Zemplén, Sárospatak,
                     with my loving family. I went to school there and moved to
                     Debrecen in 2018. For 4 years I attended to The University
@@ -229,11 +229,11 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">Sharepoint</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Suspendisse vitae est commodo, consectetur dui eu,
-                        luctus dui.
+                        Creating, supporting modern Sharepoint DMS sites to the
+                        customers
                       </p>
                     </div>
                   </div>
@@ -244,11 +244,11 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 2</div>
+                    <div class="card-header h5">Power Platform</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Donec urna magna, commodo vel mauris ac, aliquam
-                        elementum nulla.
+                        Creating canvas apps, customizing existing Sharepoint
+                        pages with Power Apps and Power Automate
                       </p>
                     </div>
                   </div>
@@ -259,11 +259,11 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 3</div>
+                    <div class="card-header h5">Working with API-s</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Phasellus lorem magna, facilisis blandit justo vitae,
-                        lobortis tempus turpis.
+                        Creating and managing AAD Applications, which are using
+                        MS Graph and Sharepoint API-s to automate various tasks
                       </p>
                     </div>
                   </div>
@@ -275,10 +275,11 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 4</div>
+                    <div class="card-header h5">SPFx</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Donec vitae justo sit amet mi finibus cursus.
+                        Adding custom webparts, extensions to Sharepoint using
+                        Typescript(such as buttons, welcome screens)
                       </p>
                     </div>
                   </div>
@@ -292,11 +293,10 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">Python</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Nullam lorem velit, vehicula ut risus ut, hendrerit
-                        suscipit dolor.
+                        Algorithyms, OOP, Data Analyzing, Deeplearning
                       </p>
                     </div>
                   </div>
@@ -307,12 +307,9 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 2</div>
+                    <div class="card-header h5">SQL</div>
                     <div class="card-body">
-                      <p class="card-text">
-                        Nam odio risus, ultricies ac nisi et, faucibus pretium
-                        est.
-                      </p>
+                      <p class="card-text">Oracle, MS SQL data managing</p>
                     </div>
                   </div>
                 </div>
@@ -323,10 +320,11 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 3</div>
+                    <div class="card-header h5">VBA</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Ut egestas maximus purus, id rhoncus nunc feugiat vitae.
+                        Creating small size full-stack desktop apps, data stored
+                        in excel
                       </p>
                     </div>
                   </div>
@@ -340,11 +338,11 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 1</div>
+                    <div class="card-header h5">HTML, CSS</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Vestibulum felis lacus, tristique sed eleifend sit amet,
-                        aliquet ut purus.
+                        Creating static HTML webpages customized with plain CSS,
+                        or CSS with Bootstrap
                       </p>
                     </div>
                   </div>
@@ -355,16 +353,32 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 2</div>
+                    <div class="card-header h5">Javascript</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Aenean malesuada, diam pretium porta pretium, orci ipsum
-                        efficitur mauris, nec egestas massa dui nec libero.
+                        FP, OOP, Asynchronous programming, using it for making
+                        bigger front-end webpages
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="width: 16rem"
+                  >
+                    <div class="card-header h5">JS tools, libraries</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Like NPM, Parcel, Leaflet, Web API-s, to make developing
+                        cleaner and easier
                       </p>
                     </div>
                   </div>
                 </div>
               </div>
+
               <!-- Softskills card deck -->
               <div class="row d-none card-deck-sortable skill__deck">
                 <!-- Card -->
