new-pics-new-grid

--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
         <section id="about">
           <h2>About</h2>
           <!-- In General -->
-          <div class="card mb-3" style="max-width: 750px">
+          <div class="card mb-5 border-dark" style="max-width: 800px">
             <div class="row g-0">
-              <div class="col-lg-4">
+              <div class="col-lg-3">
                 <img
-                  src="img\general.jpg"
-                  class="img-fluid rounded-start"
+                  src="img\general.png"
+                  class="img-fluid rounded-start p-4"
                   alt="general"
                 />
               </div>
-              <div class="col-lg-8">
+              <div class="col-lg-9">
                 <div class="card-body">
                   <h5 class="card-title">In General</h5>
                   <p class="card-text">
@@ -133,11 +133,11 @@
             </div>
           </div>
           <!-- Education -->
-          <div class="offset-lg-5">
-            <div class="card mb-3" style="max-width: 1000px">
+          <div class="offset-lg-4">
+            <div class="card mb-5 border-dark" style="max-width: 800px">
               <div class="row g-0">
-                <div class="col-lg-8">
-                  <div class="card-body">
+                <div class="col-lg-9">
+                  <div class="card-body text-right text-end">
                     <h5 class="card-title">Education</h5>
                     <p class="card-text">
                       As a fan of technology, I always wanted to learn and
@@ -152,10 +152,10 @@
                     </p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                   <img
-                    src="img\education.jpg"
-                    class="img-fluid rounded-start"
+                    src="img\education.png"
+                    class="img-fluid rounded-end position-relative p-4"
                     alt="edu"
                   />
                 </div>
@@ -163,16 +163,16 @@
             </div>
           </div>
           <!-- Experience -->
-          <div class="card" style="max-width: 600px">
+          <div class="card border-dark" style="max-width: 700px">
             <div class="row g-0">
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                 <img
-                  src="img\exp.jpg"
-                  class="img-fluid rounded-start"
+                  src="img\exp.png"
+                  class="img-fluid rounded-start p-4"
                   alt="exp"
                 />
               </div>
-              <div class="col-lg-9">
+              <div class="col-lg-8">
                 <div class="card-body">
                   <h5 class="card-title">Experience</h5>
                   <p class="card-text">
@@ -279,7 +279,7 @@
                     <div class="card-body">
                       <p class="card-text">
                         Adding custom webparts, extensions to Sharepoint using
-                        Typescript(such as buttons, welcome screens)
+                        Typescript (such as buttons, welcome screens)
                       </p>
                     </div>
                   </div>
@@ -368,11 +368,23 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">JS tools, libraries</div>
+                    <div class="card-header h5">Version control</div>
+                    <div class="card-body">
+                      <p class="card-text">Git, Github</p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="width: 16rem"
+                  >
+                    <div class="card-header h5">Tools, libraries</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Like NPM, Parcel, Leaflet, Web API-s, to make developing
-                        cleaner and easier
+                        Like NPM, Parcel, Leaflet, Web API-s, to make web
+                        developing cleaner and easier
                       </p>
                     </div>
                   </div>
@@ -387,10 +399,10 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 67</div>
+                    <div class="card-header h5">Team-player</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Etiam lacinia eu nisl quis lobortis.
+                        A team is as good as working alone, change my mind
                       </p>
                     </div>
                   </div>
@@ -401,11 +413,24 @@
                     class="card text-dark bg-light mb-4"
                     style="width: 16rem"
                   >
-                    <div class="card-header h5">Title 76</div>
+                    <div class="card-header h5">Problem solver</div>
                     <div class="card-body">
                       <p class="card-text">
-                        Sed finibus tellus sapien, ut tincidunt ante volutpat
-                        eleifend.
+                        It won't let me rest until I solve it
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="width: 16rem"
+                  >
+                    <div class="card-header h5">Hard-worker</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        No unfinished projects, what started needs an end
                       </p>
                     </div>
                   </div>
