--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     aria-label="Slide 2"
                   ></button>
                 </div>
-                <div class="carousel-inner rounded_edges">
+                <div class="carousel-inner very_rounded_edges">
                   <!-- Slide -->
                   <div class="carousel-item active">
                     <img
