--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <a
           href=""
           class="navbar-brand mb-0 h1 fst-italic p-2 bg-success rounded_edges"
-          >my Portfolio</a
+        >
+          {logo} my Portfolio</a
         >
         <button
           type="button"
@@ -64,21 +65,6 @@
             <li class="nav-item">
               <a href="#projects" class="nav-link">projects</a>
             </li>
-            <li class="nav-item dropdown">
-              <a
-                href="#contact"
-                class="nav-link dropdown-toggle"
-                id="contactId"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                >contact</a
-              >
-              <ul class="dropdown-menu" aria-labelledby="contactId">
-                <li><a href="#linkedin" class="dropdown-item">LinkedIn</a></li>
-                <li><a href="#email" class="dropdown-item">E-mail</a></li>
-              </ul>
-            </li>
           </ul>
         </div>
       </div>
@@ -90,7 +76,7 @@
           <div
             class="d-flex align-items-center justify-content-center intro_position"
           >
-            <div class="card p-4" style="max-width: 1000px">
+            <div class="card p-4">
               <h1>Intro</h1>
               <p>
                 Hi! I would like to introduce myself. My name is Máté and this
@@ -236,10 +222,7 @@
               <div class="row card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Sharepoint</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -251,10 +234,7 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Power Platform</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -266,10 +246,7 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Working with API-s</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -282,10 +259,7 @@
 
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">SPFx</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -300,10 +274,7 @@
               <div class="row d-none card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Python</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -314,10 +285,7 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">SQL</div>
                     <div class="card-body">
                       <p class="card-text">Oracle, MS SQL data managing</p>
@@ -327,10 +295,7 @@
 
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">VBA</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -345,10 +310,7 @@
               <div class="row d-none card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">HTML, CSS</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -360,10 +322,7 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Javascript</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -375,22 +334,16 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Version control</div>
                     <div class="card-body">
-                      <p class="card-text">Git, Github</p>
+                      <p class="card-text">Git, Github for managing code</p>
                     </div>
                   </div>
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Tools, libraries</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -406,10 +359,7 @@
               <div class="row d-none card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Team-player</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -420,10 +370,7 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Problem solver</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -434,10 +381,7 @@
                 </div>
                 <!-- Card -->
                 <div class="col-auto">
-                  <div
-                    class="card text-dark bg-light mb-4"
-                    style="width: 16rem"
-                  >
+                  <div class="card skill_card text-dark bg-light mb-4">
                     <div class="card-header h5">Hard-worker</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -541,7 +485,7 @@
           <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-3">
-              <div class="card">
+              <div class="card mb-2">
                 <div class="card-body">
                   <h5 class="card-title">Send me an e-mail</h5>
                   <a href="#" class="btn btn-primary">Reveal</a>
@@ -549,7 +493,7 @@
               </div>
             </div>
             <div class="col-sm-3">
-              <div class="card">
+              <div class="card mb-2">
                 <div class="card-body">
                   <h5 class="card-title">Contact me on LinkedIn</h5>
                   <a
@@ -561,7 +505,7 @@
               </div>
             </div>
             <div class="col-sm-3">
-              <div class="card">
+              <div class="card mb-2">
                 <div class="card-body">
                   <h5 class="card-title">Jump to my Github</h5>
                   <a
