intersecting-problems-fixing

--- a/index.html
+++ b/index.html
@@ -25,11 +25,6 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="script.js"></script>
-    <style>
-      body {
-        font-family: "Tahoma", "Arial", sans-serif !important;
-      }
-    </style>
   </head>
   <body>
     <!-- h Navbar -->
@@ -90,7 +85,7 @@
       </div>
       <!-- h2 About -->
       <div class="custom_margintop container">
-        <section id="about">
+        <section id="about" class="hidden">
           <!-- In General -->
           <div class="card mb-5 border-dark" style="max-width: 800px">
             <div class="row g-0">
@@ -176,7 +171,7 @@
       </div>
       <!-- h2 Skills -->
       <div class="custom_margintop container">
-        <section id="skills">
+        <section id="skills" class="hidden">
           <!-- Tab navigation -->
           <div class="card text-center">
             <div class="card-header">
@@ -396,7 +391,7 @@
         </section>
       </div>
       <!-- h2 Projects -->
-      <div class="custom_margintop container">
+      <div class="custom_margintop container" class="hidden">
         <section id="projects">
           <div class="row">
             <div class="col-sm-1"></div>
@@ -481,7 +476,7 @@
       </div>
       <!-- h2 Contact -->
       <div class="custom_margintop container">
-        <section id="contact">
+        <section id="contact" class="hidden">
           <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-3">
