--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container">
         <section id="intro" class="hidden">
           <div
-            class="d-flex align-items-center justify-content-center intro_position"
+            class="d-flex align-items-center justify-content-center intro_style"
           >
             <div class="card p-4">
               <h1>Intro</h1>
@@ -483,7 +483,7 @@
               <div class="card mb-2">
                 <div class="card-body">
                   <h5 class="card-title">Send me an e-mail</h5>
-                  <a href="#" class="btn btn-primary">Reveal</a>
+                  <a href="#" class="btn btn-primary">Copy adress</a>
                 </div>
               </div>
             </div>
@@ -506,7 +506,7 @@
                   <a
                     href="https://github.com/rakmate9812"
                     class="btn btn-primary"
-                    >Leave</a
+                    >Reveal</a
                   >
                 </div>
               </div>
