--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <div class="collapse navbar-collapse" id="navbarId">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#about" class="nav-link">about</a>
+              <a href="#about" class="nav-link nav__link">about</a>
             </li>
             <li class="nav-item">
-              <a href="#skills" class="nav-link">skills</a>
+              <a href="#skills" class="nav-link nav__link">skills</a>
             </li>
             <li class="nav-item">
-              <a href="#projects" class="nav-link">projects</a>
+              <a href="#projects" class="nav-link nav__link">projects</a>
             </li>
           </ul>
         </div>
@@ -71,12 +71,12 @@
           <div
             class="d-flex align-items-center justify-content-center intro_style"
           >
-            <div class="card p-4">
+            <div class="card p-4 border-dark">
               <h1>Intro</h1>
               <p>
-                Hi! I would like to introduce myself. My name is Máté and this
-                is my self-made portfolio page. Thank you for navigating here.
-                If you carry on, you will get a small present at the end.<br /><br />
+                Hi! I would like to introduce myself. My name is Máté, I'm a
+                Junior Web Developer, and this is my self-made portfolio page.
+                Thank you for navigating here.<br /><br />
                 Have a good time!
               </p>
             </div>
@@ -354,7 +354,9 @@
               <div class="row d-none card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
-                  <div class="card skill_card text-dark bg-light mb-4">
+                  <div
+                    class="card skill_card text-dark bg-light mb-4 very_rounded_edges"
+                  >
                     <div class="card-header h5">Team-player</div>
                     <div class="card-body">
                       <p class="card-text">
@@ -391,8 +393,8 @@
         </section>
       </div>
       <!-- h2 Projects -->
-      <div class="custom_margintop container" class="hidden">
-        <section id="projects">
+      <div class="custom_margintop container">
+        <section id="projects" class="hidden">
           <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-10 d-flex justify-content-center">
@@ -478,16 +480,26 @@
       <div class="custom_margintop container">
         <section id="contact" class="hidden">
           <div class="row">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-3">
+            <div class="col-3"></div>
+            <div class="col-md-3">
               <div class="card mb-2">
                 <div class="card-body">
                   <h5 class="card-title">Send me an e-mail</h5>
-                  <a href="#" class="btn btn-primary">Copy adress</a>
+
+                  <button
+                    type="button"
+                    class="btn btn-primary popover__btn"
+                    data-bs-container="body"
+                    data-bs-toggle="popover"
+                    data-bs-placement="bottom"
+                    data-bs-content="Copied!"
+                  >
+                    Copy adress
+                  </button>
                 </div>
               </div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-md-3">
               <div class="card mb-2">
                 <div class="card-body">
                   <h5 class="card-title">Contact me on LinkedIn</h5>
@@ -499,36 +511,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-3">
-              <div class="card mb-2">
-                <div class="card-body">
-                  <h5 class="card-title">Jump to my Github</h5>
-                  <a
-                    href="https://github.com/rakmate9812"
-                    class="btn btn-primary"
-                    >Reveal</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-1"></div>
+
+            <div class="col-sm-3"></div>
           </div>
-          <!-- h2 Contact -->
-          <!-- <h2>Contact</h2>
-          <p>You can contact me via</p>
-          <div class="col-sm-4"></div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item" id="email">
-              Email: rakmate9812@gmail.com
-            </li>
-            <li class="list-group-item" id="linkedin">
-              LinkedIn:
-              <a
-                href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
-                >Máté Rák</a
-              >
-            </li>
-          </ul> -->
         </section>
       </div>
     </main>
@@ -540,10 +525,9 @@
             <div class="col-1"></div>
             <div class="col-10 text-center">
               <p>
-                Thank you for getting this far! The present I promised, you've
-                already gotten. You've got to know another human being in your
-                lifetime. So, if you want this relationship to be two-way, you
-                should contact me when you're done here. Bye!
+                Thank you for getting this far! You've got to know another human
+                being in your lifetime. So, if you want this relationship to be
+                two-way, you should contact me when you're done here. Bye!
               </p>
               <p>© 2023 by Máté Rák</p>
             </div>
