observing-navbar-items-and-styling

--- a/index.html
+++ b/index.html
@@ -522,19 +522,19 @@
       <div class="mt-5 pt-3 pb-3 bg_nav_foot">
         <div class="container">
           <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10 text-center">
-              <p>
-                Thank you for getting this far! You've got to know another human
-                being in your lifetime. So, if you want this relationship to be
-                two-way, you should contact me when you're done here. Bye!
-              </p>
-              <p>© 2023 by Máté Rák</p>
+            <div class="col-6 text-center">
+              Thank you for getting this far! You've got to know another human
+              being in your lifetime. So, if you want this relationship to be
+              two-way, you should contact me when you're done here. Bye!
             </div>
+            <div class="col-5"></div>
+          </div>
+          <div class="col-1"></div>
+          <div class="row">
+            <p class="text-center">© 2023 by Máté Rák</p>
           </div>
         </div>
       </div>
-      <div class="col-1"></div>
     </footer>
   </body>
 </html>
